--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>大事件-登录/注册</title>
-    <link rel="stylesheet" href="Assets/css/login.css">
+    <title>Document</title>
 </head>
 <body>
     
