--- a/login.html
+++ b/login.html
@@ -4,9 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>大事件-登录/注册</title>
+    <link rel="stylesheet" href="/Web_XiangMu/Assets/css/login.css">
+    <link rel="stylesheet" href="/Web_XiangMu/Assets/lib/layui/css/layui.css">
+    <script src="/Web_XiangMu/Assets/lib/jquery-3.6.0.min.js"></script>
+    <script src="/Web_XiangMu/Assets/lib/layui/layui.js"></script>
+    <script src="/Web_XiangMu/Assets/js/baseAPI.js"></script>
+    <script src="/Web_XiangMu/Assets/js/login.js"></script>
 </head>
 <body>
-    
+    <!-- 登录注册区域 -->
+    <div id="DengLuBanKuai">
+        <div id="HoTaiGuanLiXiTo">后台管理系统</div>
+        <!-- 登陆区域 -->
+        <div class="DengLu-box">
+            <!-- 登录的表单 -->
+            <form class="layui-form" id="Ster_DengLu">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="usname" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" id="padding-left">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required  lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input" id="padding-left">
+                </div>
+                <div class="layui-form-item">
+                    <!-- 注意：表单提交按钮和普通按钮的区别，就是 lay-submit 属性 -->
+                    <button lay-submit class="layui-btn layui-btn-fluid layui-btn-normal" id="html">登录</button>
+                </div>
+                <div class="layui-form-item right">
+                    <a href="javascript:;" class="link-ZhuChe">去注册账号</a>
+                </div>
+            </form>
+        </div>
+        <!-- 注册区域 -->
+        <div class="ZhuChe-box">
+            <form class="layui-form" id="Ster_ZhuCe">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="usname" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input" id="padding-left">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required  lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input" id="padding-left">
+                </div>
+                <!-- 确认密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required  lay-verify="required|pwd|repwd" placeholder="请确认密码" autocomplete="off" class="layui-input" id="padding-left">
+                </div>
+                <div class="layui-form-item">
+                    <!-- 注意：表单提交按钮和普通按钮的区别，就是 lay-submit 属性 -->
+                    <button lay-submit class="layui-btn layui-btn-fluid layui-btn-normal">注册</button>
+                </div>
+                <div class="layui-form-item right">
+                    <a href="javascript:;" class="link-DengLu">去登录</a>
+                </div>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
